<resources>
    <string name="app_name">LearnMore</string>
    <string name="Courses">Courses</string>
    <string name="newCourses">Check Our New Courses</string>
    <string name="papers">Papers</string>
    <string name="Rpapers">Check famous research papers</string>
    <string name="donation">Donation</string>
    <string name="contact">Contact</string>
    <string name="contactus">If you have a concern you can contact us</string>
    <string name="discussion">Discussion</string>
    <string name="idea">Idea</string>
    <string name="Ideas">Help us improve with your ideas</string>
    <string name="dicuss">Discuss with others</string>
    <string name="learn">Learn More</string>
    <string name="title_activity_main">MainActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="join_our">Join Our</string>
    <string name="_26_480">26,480</string>
    <string name="description">Description</string>
    <string name="take_the_exam">Take the Exam</string>
    <string name="take_a_quick_test">Take A quick Test</string>
    <string name="search">Search</string>
    <string name="video_name">Video Name</string>
    <string name="length">length</string>
    <string name="watch_now">Watch Now</string>
    <string name="note_name">Note Name</string>


    <!--
    this is the login strings
    -->
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="prompt_password">Please enter your password</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="email_id">Email ID</string>
</resources>
