<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/backgroundcolor"
    tools:context="learnmore.projet.learnmore.HomeDashboard">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_height="300dp"
        android:layout_width="match_parent"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        >
        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsingtoolbar"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            app:layout_scrollFlags="exitUntilCollapsed|scroll"
            app:contentScrim="?android:attr/colorPrimary"
            app:title="@string/learn"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleMarginEnd="64dp"
            android:background="@drawable/matrialbg">
            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                app:popupTheme="@style/Theme.AppCompat.Light"
                app:layout_collapseMode="pin"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"/>

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp"
            android:background="@color/backgroundcolor"
            android:gravity="center">

            <LinearLayout
                android:clipToPadding="false"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <android.support.v7.widget.CardView
                    android:id="@+id/course"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:layout_width="140dp"
                    android:layout_height="190dp"
                    android:layout_margin="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center">
                        <ImageView
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:background="@drawable/cerclebackgroundyello"
                            android:src="@drawable/ic_school_black_24dp"
                            android:padding="10dp"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:layout_marginTop="10dp"
                            android:text="@string/Courses"/>
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/lightgray"
                            android:layout_margin="10dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/newCourses"
                            android:padding="5dp"
                            android:textColor="@color/darkergray"/>
                    </LinearLayout>
                </android.support.v7.widget.CardView>



                <android.support.v7.widget.CardView
                    android:id="@+id/paper"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:layout_width="140dp"
                    android:layout_height="190dp"
                    android:layout_margin="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center">
                        <ImageView
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:background="@drawable/cerclebackgroundgreen"
                            android:src="@drawable/ic_attach_file_black_24dp"
                            android:padding="10dp"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:layout_marginTop="10dp"
                            android:text="@string/papers"/>
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/lightgray"
                            android:layout_margin="10dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/Rpapers"
                            android:padding="5dp"
                            android:textColor="@color/darkergray"/>
                    </LinearLayout>
                </android.support.v7.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:clipToPadding="false"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <android.support.v7.widget.CardView
                    android:id="@+id/discuss"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:layout_width="140dp"
                    android:layout_height="190dp"
                    android:layout_margin="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center">
                        <ImageView
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:background="@drawable/cerclebackgroundcyan"
                            android:src="@drawable/ic_group_black_24dp"
                            android:padding="10dp"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:layout_marginTop="10dp"
                            android:text="@string/discussion"/>
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/lightgray"
                            android:layout_margin="10dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/dicuss"
                            android:padding="5dp"
                            android:textColor="@color/darkergray"/>
                    </LinearLayout>
                </android.support.v7.widget.CardView>



                <android.support.v7.widget.CardView
                    android:id="@+id/idea"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:layout_width="140dp"
                    android:layout_height="190dp"
                    android:layout_margin="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center">
                        <ImageView
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:background="@drawable/cerclebackgroundpink"
                            android:src="@drawable/ic_lightbulb_outline_black_24dp"
                            android:padding="10dp"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:layout_marginTop="10dp"
                            android:text="@string/idea"/>
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/lightgray"
                            android:layout_margin="10dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/Ideas"
                            android:padding="5dp"
                            android:textColor="@color/darkergray"/>
                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:clipToPadding="false"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <android.support.v7.widget.CardView
                    android:id="@+id/donnation"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:layout_width="140dp"
                    android:layout_height="190dp"
                    android:layout_margin="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center">
                        <ImageView
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:background="@drawable/cerclebackgroundpurple"
                            android:src="@drawable/ic_attach_money_black_24dp"
                            android:padding="10dp"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:layout_marginTop="10dp"
                            android:text="@string/donation"/>
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/lightgray"
                            android:layout_margin="10dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="If you like this app you can help"
                            android:padding="5dp"
                            android:textColor="@color/darkergray"/>
                    </LinearLayout>
                </android.support.v7.widget.CardView>



                <android.support.v7.widget.CardView
                    android:id="@+id/contact"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:layout_width="140dp"
                    android:layout_height="190dp"
                    android:layout_margin="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center">
                        <ImageView
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:background="@drawable/cerclebackgroundred"
                            android:src="@drawable/ic_assignment_ind_black_24dp"
                            android:padding="10dp"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:layout_marginTop="10dp"
                            android:text="@string/contact"/>
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/lightgray"
                            android:layout_margin="10dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/contactus"
                            android:padding="5dp"
                            android:textColor="@color/darkergray"/>
                    </LinearLayout>
                </android.support.v7.widget.CardView>

            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>